Added Chat Feature

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,6 +4,6 @@
   <h2 class="display-2">Welcome</h2><br>
   <h1 class="lead"><%= name %></h1><br>
   <a href="/user/bookings" type="submit" role="button" class="btn btn-primary btn-success">Book Schedule</a>
-  <a href="/public/static/chat.html" type="submit" role="button" class="btn btn-primary btn-info">Enter Chat </a>
+  <a href="/user/appointmentCode" type="submit" role="button" class="btn btn-primary btn-info">Enter Secret Chat-Code </a>
   <a href="/" type="submit" role="button" class="btn btn-primary btn-danger">Logout</a>
 </div>
